--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
   "engines": {
     "node": ">=14"
   },
-  "exports": {
-    "types": "./index.d.ts",
-    "import": "./index.js"
-  },
+  "main": "./index.js",
+  "types": "./index.d.ts",
   "publishConfig": {
     "directory": "package"
   },
